Fixed vertical align of svg icon

--- a/src/sass/base.scss
+++ b/src/sass/base.scss
@@ -108,7 +108,7 @@
             -ms-transform: translateY(-50%);
             transform: translateY(-50%);
             display: inline-block;
-            vertical-align: middle;
+            vertical-align: baseline;
         }
     }
 }
